--- a/style.css
+++ b/style.css
@@ -6,15 +6,66 @@ body {
   color: white;
 }
 
+#info{
+  position: fixed;
+  right: 10px;
+  top: 10px;
+}
+
 #form {
   background-color: rgb(55, 59, 63);
-  display: inline-block;
+  display: block;
   padding: 20px;
   border-radius: 10px;
-  position: fixed;
-  right: 40px;
-  top: 40px;
+  margin: 10px;
 }
+
+#data {
+  background-color: rgb(55, 59, 63);
+  display: block;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.label span{
+  float: right;
+}
+
+
+#grid {
+  display: grid;
+  margin: 5px;
+  grid-template-columns: repeat(6, 1fr);
+  aspect-ratio: 1/1;
+  gap: 1%;
+}
+
+.square {
+  aspect-ratio: 1/ 1;
+  display: flex;
+  align-items: center;
+  padding: 5%;
+  background-color: #1E1E1E;
+  color: #fff;
+}
+
+.square img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+
+.square.fullImg {
+  padding: 0;
+}
+
+.square.fullImg img {
+  object-fit: cover;
+}
+
+
 
 #generate {
   background-color: aliceblue;
